# TasksFastAPI

./: Dockerfile  Dockerfile_consumer  README.md  docker-compose-test.yml  docker-compose.yml  pyproject.toml
src/: config.py  main.py
src/api/: tasks.py  users.py
src/database/: db.py
src/exception_handler/: exception_handler.py
src/fill_db_with_fake_data/: fill_db.py  metadata.py
src/logger/: logger.py
src/models/: __init__.py  base.py  tasks.py  users.py
src/rabbitmq/: consumer.py  handlers.py
src/repositories/: base_rep.py  tasks_rep.py  users_rep.py
src/schemas/: base_schemas.py  tasks_schema.py  users_schemas.py
src/services/: base_service.py  tasks.py  users.py
src/unit_of_work/: unit_of_work.py
tests/: conftest.py
tests/db_mocks/: __init__.py  users.py
tests/integration/api/: users.py
tests/test_cases/: __init__.py  service.py  user_routes.py
tests/unit/: test_service.py
tests/utils/: __init__.py  fake_unit_of_work.py  utils.py
